Added: New translations and new header behaviour

--- a/assets/i18n/fr.json
+++ b/assets/i18n/fr.json
@@ -2,6 +2,8 @@
     "menu.starters": "Entrées",
     "menu.main_courses": "Plats Principaux",
     "menu.drinks": "Boissons",
-    "menu.desserts": "Desserts"
+    "menu.desserts": "Desserts",
+    "menu.full_menu": "#FR_MENU_FULL_MENU",
+    "full-menu.title": "#STARTERS_TITLE"
 }
   
