--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -2,5 +2,7 @@
     "menu.starters": "Starters",
     "menu.main_courses": "Main Courses",
     "menu.drinks": "Drinks",
-    "menu.desserts": "Desserts"
+    "menu.desserts": "Desserts",
+    "menu.full_menu": "Full Menu",
+    "full-menu.title": "Full Menu"
 }  
