--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -2,6 +2,7 @@
     "menu.starters": "Entrantes",
     "menu.main_courses": "Platos Principales",
     "menu.drinks": "Bebidas",
-    "menu.desserts": "Postres"
+    "menu.desserts": "Postres",
+    "menu.full_menu": "Menu completo",
+    "full-menu.title": "Menu completo"
 }
-  
