Added: Home btn config

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -4,5 +4,6 @@
     "menu.drinks": "Drinks",
     "menu.desserts": "Desserts",
     "menu.full_menu": "Full Menu",
-    "full-menu.title": "Full Menu"
+    "full-menu.title": "Full Menu",
+    "navbar.home-btn": "Home"
 }  
