--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -4,5 +4,6 @@
     "menu.drinks": "Bebidas",
     "menu.desserts": "Postres",
     "menu.full_menu": "Menu completo",
-    "full-menu.title": "Menu completo"
+    "full-menu.title": "Menu completo",
+    "navbar.home-btn": "Inicio"
 }
