--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -6,5 +6,6 @@
     "service-menu.desserts": "Desserts",
     "service-menu.full_service": "Full Menu",
     "service-menu.full-service.title": "Full Menu",
-    "header.navbar.home-btn": "Home"
+    "header.navbar.home-btn": "Home",
+    "header.cover.home-btn": "Home"
 }  
