--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -6,5 +6,6 @@
     "service-menu.desserts": "Postres",
     "service-menu.full_service": "Menú completo",
     "service-menu.full-service.title": "Menú completo",
-    "header.navbar.home-btn": "Inicio"
+    "header.navbar.home-btn": "Inicio",
+    "header.cover.home-btn": "Inicio"
 }
