--- a/assets/i18n/fr.json
+++ b/assets/i18n/fr.json
@@ -6,5 +6,6 @@
     "service-menu.desserts": "Desserts",
     "service-menu.full_service": "Menu complet",
     "service-menu.full-service.title": "Menu complet",
-    "header.navbar.home-btn": "Accueil"
+    "header.navbar.home-btn": "Accueil",
+    "header.cover.home-btn": "#FRheader.cover.home-btn"
 }
