--- a/assets/i18n/pt.json
+++ b/assets/i18n/pt.json
@@ -6,5 +6,6 @@
     "service-menu.desserts": "Sobremesas",
     "service-menu.full_service": "Cardápio completo",
     "service-menu.full-service.title": "Cardápio completo",
-    "header.navbar.home-btn": "Início"
+    "header.navbar.home-btn": "Início",
+    "header.cover.home-btn": "#PTheader.cover.home-btn"
 }
